--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -27,3 +27,15 @@
     content: var(--company-name) !important;
 } 
 
+
+
+
+.connect{
+    opacity: 0!important;
+    width: 0!important;
+    height: 0!important;
+    padding: 0!important;
+    margin: 0!important;
+}
+
+
